# Faraday

./: CMakeLists.txt  README.md
include/: common.h  config.h  config.h.in  error.h  expr.h  lexer.h  parser.h  symbol_table.h  utility.h
src/: error.c  lexer.c  main.c  symbol_table.c  utility.c
src/calculator/: calculator.c
src/compressor/: compressor.c
src/cross_referencer/: cross_referencer.c
src/cruncher/: cruncher.c
src/faraday/: main.c
src/lister/: lister.c
src/uncruncher/: uncruncher.c
tests/: compressor.far.com  lexer.far  lexer.far.com  lexer.far.cru  lexer.far.unc  lister.far
